--- a/DBSBloboDiary/src/main/AndroidManifest.xml
+++ b/DBSBloboDiary/src/main/AndroidManifest.xml
@@ -24,13 +24,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".MyApplication">
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -40,12 +40,18 @@
         </activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.AboutActivity"
-            android:label="@string/title_activity_about" >
+            android:label="@string/title_activity_about"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
         </activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.bluetooth.DeviceListActivity"
             android:label="@string/title_device_list"
             android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
+        <activity
+            android:name="uk.co.digitalbrainswitch.dbsblobodiary.SettingsActivity"
+            android:label="@string/title_activity_settings"
             android:theme="@android:style/Theme.Holo.Light.Dialog">
         </activity>
     </application>
