--- a/DBSBloboDiary/build.gradle
+++ b/DBSBloboDiary/build.gradle
@@ -24,4 +24,7 @@ android {
 
 dependencies {
 	compile 'com.android.support:appcompat-v7:18.0.0'
+    compile files('libs/achartengine-1.1.0.jar')
+    compile files('libs/google-play-services.jar')
+    compile 'com.google.android.gms:play-services:3.1.36'
 }
