added show map function (but incomplete)

--- a/DBSBloboDiary/src/main/AndroidManifest.xml
+++ b/DBSBloboDiary/src/main/AndroidManifest.xml
@@ -71,8 +71,13 @@
         </activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.TimeDataListActivity"
-            android:label="@string/title_activity_time_data_list" >
-
+            android:label="@string/title_activity_time_data_list"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
+        <activity
+            android:name="uk.co.digitalbrainswitch.dbsblobodiary.MapListActivity"
+            android:label="@string/title_activity_map_list"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
         </activity>
     </application>
 
