--- a/DBSBloboDiary/src/main/AndroidManifest.xml
+++ b/DBSBloboDiary/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="16" />
 
     <!-- permissions -->
@@ -34,11 +34,7 @@
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ShowTimeDataActivity"
@@ -83,6 +79,20 @@
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ReflectionActivity"
             android:label="@string/title_activity_reflection"
             android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
+        <activity
+            android:name="uk.co.digitalbrainswitch.dbsblobodiary.ViewAnEventActivity"
+            android:label="@string/title_activity_view_an_event" >
+
+        </activity>
+        <activity
+            android:name="uk.co.digitalbrainswitch.dbsblobodiary.CalendarDatePickerActivity"
+            android:label="@string/title_activity_calendar_date_picker" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
