--- a/DBSBloboDiary/src/main/AndroidManifest.xml
+++ b/DBSBloboDiary/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.co.digitalbrainswitch.dbsblobodiary"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -30,10 +30,15 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDZ3wx1TtrL1VhdeB5Mzmquj5vNu-eZCs8" />
+
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,70 +47,64 @@
         </activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ShowTimeDataActivity"
-            android:label="@string/title_activity_show_time_data" >
-        </activity>
+            android:label="@string/title_activity_show_time_data"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.AboutActivity"
             android:label="@string/title_activity_about"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.bluetooth.DeviceListActivity"
             android:label="@string/title_device_list"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
-
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDZ3wx1TtrL1VhdeB5Mzmquj5vNu-eZCs8" />
-
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.MapActivity"
-            android:label="@string/title_activity_map" >
-        </activity>
+            android:label="@string/title_activity_map"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.TimeDataListActivity"
             android:label="@string/title_activity_time_data_list"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.MapListActivity"
             android:label="@string/title_activity_map_list"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ReflectionActivity"
             android:label="@string/title_activity_reflection"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ViewAnEventActivity"
-            android:label="@string/title_activity_view_an_event" >
-        </activity>
+            android:label="@string/title_activity_view_an_event"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.CalendarDatePickerActivity"
-            android:label="@string/title_activity_calendar_date_picker" >
-        </activity>
+            android:label="@string/title_activity_calendar_date_picker"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.ShowEventsActivity"
             android:label="@string/title_activity_show_events"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.AddDiaryEntryActivity"
-            android:label="@string/title_activity_add_diary_entry" >
-        </activity>
+            android:label="@string/title_activity_add_diary_entry"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="uk.co.digitalbrainswitch.dbsblobodiary.HiddenSettingsActivity"
             android:label="@string/title_activity_hidden_settings"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"></activity>
     </application>
 
 </manifest>
